Modificado o Json do processo para deixar salvar apenas ids existentes.